--- a/catalog/view/theme/default/template/checkout/payment_method.twig
+++ b/catalog/view/theme/default/template/checkout/payment_method.twig
@@ -7,9 +7,9 @@
 <div class="radio">
   <label>{% if payment_method.code == code or not code %}
     {% set code = payment_method.code %}
-    <input type="radio" name="payment_method" value="{{ payment_method.code }}" checked="checked" />
+    <input class="p_radio" type="radio" name="payment_method" value="{{ payment_method.code }}" checked="checked" />
     {% else %}
-    <input type="radio" name="payment_method" value="{{ payment_method.code }}" />
+    <input class="p_radio" type="radio" name="payment_method" value="{{ payment_method.code }}" />
     {% endif %}
     {{ payment_method.title }}
     {% if payment_method.terms %}
@@ -24,14 +24,14 @@
 </p>
 {% if text_agree %}
 <div class="buttons">
-  <div class="pull-right">{{ text_agree }}
+  <div class="pull-right" style="margin-right: 1em">{{ text_agree }}
     {% if agree %}
     <input type="checkbox" name="agree" value="1" checked="checked" />
     {% else %}
-    <input type="checkbox" name="agree" value="1" />
+    <input type="checkbox" name="agree" value="1" checked="checked" />
     {% endif %}
     &nbsp;
-    <input type="button" value="{{ button_continue }}" id="button-payment-method" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
+    <input type="button" value="{{ button_continue }}" id="button-payment-method" data-loading-text="{{ text_loading }}" class="add" style="max-width: 10em !important;display: inline !important;" />
   </div>
 </div>
 {% else %}
