--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -40,13 +40,13 @@
   <script>let inputmask_1 = {"mask":"+7 (999) - 999 - 99 - 99"};</script>
 </head>
 <body>
-<nav id="top">
+{#<nav id="top">
   <div class="container">{{ currency }}
     {{ language }}
     <div id="top-links" class="nav pull-right">
       <ul class="list-inline">
         <li><a href="{{ contact }}"><i class="fa fa-phone"></i></a> <span class="hidden-xs hidden-sm hidden-md">{{ telephone }}</span></li>
-        <li class="dropdown"><a href="{{ account }}" title="{{ text_account }}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_account }}</span> <span class="caret"></span></a>
+        #}{#<li class="dropdown"><a href="{{ account }}" title="{{ text_account }}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_account }}</span> <span class="caret"></span></a>
           <ul class="dropdown-menu dropdown-menu-right">
             {% if logged %}
             <li><a href="{{ account }}">{{ text_account }}</a></li>
@@ -61,12 +61,12 @@
           </ul>
         </li>
         <li><a href="{{ wishlist }}" id="wishlist-total" title="{{ text_wishlist }}"><i class="fa fa-heart"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_wishlist }}</span></a></li>
-        <li><a href="{{ shopping_cart }}" title="{{ text_shopping_cart }}"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_shopping_cart }}</span></a></li>
+        #}{#<li><a href="{{ shopping_cart }}" title="{{ text_shopping_cart }}"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_shopping_cart }}</span></a></li>
         <li><a href="{{ checkout }}" title="{{ text_checkout }}"><i class="fa fa-share"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_checkout }}</span></a></li>
       </ul>
     </div>
   </div>
-</nav>
+</nav>#}
 <header>
   <div class="container">
     <div class="row">
@@ -75,8 +75,18 @@
           <h1><a href="{{ home }}">{{ name }}</a></h1>
           {% endif %}</div>
       </div>
-      <div class="col-sm-5">{{ search }}</div>
-      <div class="col-sm-3">{{ cart }}</div>
+{#      <div class="col-sm-5">{{ search }}</div>#}
+      <div class="col-sm-5">
+        <h1 class="h3">{{ name }}</h1>
+        <ul class="list-inline">
+          <li><a href="{{ contact }}"><i class="fa fa-phone"></i></a> <span class="hidden-xs hidden-sm hidden-md">{{ telephone }}</span></li>
+          <li><address>г. Чебоксары ул. Калинина 105а</address></li>
+        </ul>
+      </div>
+      <div class="col-sm-3">
+        {{ search }}
+        {{ cart }}
+      </div>
     </div>
   </div>
 </header>
