--- a/catalog/view/theme/default/template/common/menu.twig
+++ b/catalog/view/theme/default/template/common/menu.twig
@@ -5,10 +5,10 @@
       <button type="button" class="btn btn-navbar navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-bars"></i></button>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" id="menu-ul">
         {% for category in categories %}
         {% if category.children %}
-        <li class="dropdown"><a href="{{ category.href }}" class="dropdown-toggle" data-toggle="dropdown">{{ category.name }}</a>
+        <li class="dropdown pulse"><a href="{{ category.href }}" class="dropdown-toggle" data-toggle="dropdown">{{ category.name }}</a>
           <div class="dropdown-menu">
             <div class="dropdown-inner"> {% for children in category.children|batch(category.children|length / category.column|round(1, 'ceil')) %}
               <ul class="list-unstyled">
@@ -20,7 +20,7 @@
             <a href="{{ category.href }}" class="see-all">{{ text_all }} {{ category.name }}</a> </div>
         </li>
         {% else %}
-        <li><a href="{{ category.href }}">{{ category.name }}</a></li>
+        <li><a class="pulse" href="{{ category.href }}">{{ category.name }}</a></li>
         {% endif %}
         {% endfor %}
       </ul>
