--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -949,3 +949,11 @@ input[name=telephone]{
 }
 
 /*********/
+#loader {
+	position: fixed;
+	z-index: 10000000000;
+	left: calc(100%/2 - 30px);
+	top: calc(100%/2 - 30px);
+	display: none;
+}
+
