--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -40,6 +40,7 @@
   <script>let inputmask_1 = {"mask":"+7 (999) - 999 - 99 - 99"};</script>
 </head>
 <body>
+<div id="container">
 <div id="loader">
   <!--        <i class="fas fa-spinner fa-spin"></i>-->
   <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
