--- a/catalog/view/theme/default/template/checkout/guest.twig
+++ b/catalog/view/theme/default/template/checkout/guest.twig
@@ -301,7 +301,7 @@
 {% endif %}
 <div class="buttons">
     <div class="pull-right">
-        <input type="button" value="{{ button_continue }}" id="button-guest" data-loading-text="{{ text_loading }}" class="add btn-next" />
+        <input type="button" value="{{ button_continue }}" id="button-guest" data-loading-text="{{ text_loading }}" class="add btn-next" style="margin-right: 1em !important;" />
     </div>
 </div>
 <script type="text/javascript"><!--
