--- a/catalog/view/theme/default/template/extension/captcha/basic.twig
+++ b/catalog/view/theme/default/template/extension/captcha/basic.twig
@@ -1,14 +1,15 @@
 <fieldset>
   <legend>{{ text_captcha }}</legend>
-  <div class="form-group required">
+  <div class="form-group">
     {% if route|slice(0, 9) == 'checkout/' %}
     <label class="control-label" for="input-payment-captcha">{{ entry_captcha }}</label>
-    <input type="text" name="captcha" id="input-payment-captcha" class="form-control" autocomplete="off" />
-    <img src="index.php?route=extension/captcha/basic/captcha" alt="" />
+      <img src="index.php?route=extension/captcha/basic/captcha" alt="" style="float: left" />
+      <input type="text" name="captcha" id="input-payment-captcha" class="form-control" autocomplete="off" style="border-radius: 0;border: 1px solid #444;width: 8em;display: block;float: left;margin-left: 1em;" />
     {% else %}
     <label class="col-sm-2 control-label" for="input-captcha">{{ entry_captcha }}</label>
     <div class="col-sm-10">
       <input type="text" name="captcha" id="input-captcha" class="form-control" />
+      <br>
       <img src="index.php?route=extension/captcha/basic/captcha" alt="" />
       {% if error_captcha %}
       <div class="text-danger">{{ error_captcha }}</div>
