--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -267,8 +267,8 @@ div.required .control-label:before {
 	position: relative;
 }
 #menu .nav > li > a {
-	color: #000;
-	/*text-shadow: 0 -1px 0 var(--btn-color);*/
+	color: #000 !important;
+	text-shadow: 0 -1px 0 var(--logo-color);
 	padding: 10px 15px 10px 15px;
 	min-height: 15px;
 	background-color: transparent;
@@ -871,7 +871,9 @@ h2.price {
 	transition: top 333ms ease-in-out;
 	background-color: var(--btn-color);
 	color: #fff;
-	letter-spacing: 0.1em;
+	letter-spacing: 0.1em !important;
+	font-size: 110% !important;
+	text-transform: uppercase;
 }
 
 .btn-cart:hover{
@@ -919,7 +921,7 @@ label.control-label{
 	margin: 0 auto;
 }
 
-textarea[name=comment]{
+textarea[name=comment], textarea[name=enquiry]{
 	box-shadow: 5px 5px 5px #999;
 }
 
@@ -931,8 +933,6 @@ input[name=telephone]{
 	background: #fff !important;
 	border: 1px solid var(--btn-color) !important;
 }
-
-.p_radio{}
 
 /* topMenu hover effects */
 .pulse {
@@ -973,3 +973,142 @@ input[name=telephone]{
     opacity: .5;
 }
 
+.header_shadow {
+	text-shadow: 0 1px 0 var(--logo-color), 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
+	color: #000;
+	margin-bottom: .5em;
+	letter-spacing: .2em;
+}
+
+.underline{
+	text-decoration: underline;
+}
+
+/*radio button*/
+.p-radio{
+	color: #444;
+	position: relative;
+	margin-top: -1em;
+}
+
+.p-radio input[type=radio]{
+	position: absolute;
+	visibility: hidden;
+}
+
+.p-radio label{
+	display: block;
+	position: relative;
+	font-weight: 300;
+	font-size: 1.35em;
+	padding: 25px 25px 25px 80px;
+	margin: 10px auto;
+	height: 30px;
+	z-index: 9;
+	cursor: pointer;
+	-webkit-transition: all 0.25s linear;
+}
+
+.p-radio:hover label{
+	/*color: #FFFFFF;*/
+}
+
+.p-radio .check{
+	display: block;
+	position: absolute;
+	border: 5px solid #AAAAAA;
+	border-radius: 100%;
+	height: 26px;
+	width: 26px;
+	top: 20px;
+	left: 40px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}
+
+.p-radio:hover .check {
+	border: 5px solid var(--btn-hover);
+}
+
+.p-radio .check::before {
+	display: block;
+	position: absolute;
+	content: '';
+	border-radius: 100%;
+	height: 10px;
+	width: 10px;
+	top: 3px;
+	left: 3px;
+	margin: auto;
+	transition: background 0.25s linear;
+	-webkit-transition: background 0.25s linear;
+}
+
+.p-radio input[type=radio]:checked ~ .check {
+	border: 5px solid var(--btn-color);
+}
+
+.p-radio input[type=radio]:checked ~ .check::before{
+	background: var(--btn-color);
+}
+
+.p-radio input[type=radio]:checked ~ label{
+	color: var(--btn-color);
+}
+/**/
+/* Checkbocks */
+/* .squaredTwo */
+.squaredTwo {
+	width: 28px;
+	height: 28px;
+	position: relative;
+	background: #fcfff4;
+	background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+	box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+}
+.squaredTwo label {
+	width: 20px;
+	height: 20px;
+	cursor: pointer;
+	position: absolute;
+	left: 4px;
+	top: 4px;
+	/*background: linear-gradient(to bottom, #eee 0%, #999 100%);*/
+	box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px white;
+}
+.squaredTwo label:after {
+	content: '';
+	width: 20px;
+	height: 10px;
+	position: absolute;
+	/*top: 4px;*/
+	/*left: 4px;*/
+	border: 3px solid #218838;
+	border-top: none;
+	border-right: none;
+	background: transparent;
+	opacity: 0;
+	transform: rotate(-45deg);
+}
+/*.squaredTwo label:hover::after {
+    opacity: 0.3;
+}*/
+.squaredTwo input[type=checkbox] {
+	visibility: hidden !important;
+}
+.squaredTwo input[type=checkbox]:checked + label:after {
+	opacity: 1 !important;
+}
+
+.squaredTwo span{
+	display: block;
+	width: 260px;
+	position: absolute;
+	left: 40px;
+	top: 2px;
+}
+/* end .squaredOne */
+.contact-form{
+	max-width: 800px !important;
+}
