--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -96,7 +96,7 @@
       </div>
 {#      <div class="col-sm-5">{{ search }}</div>#}
       <div class="col-sm-5">
-        <h1 class="h3">{{ name }}</h1>
+        <h1 class="h3 header_shadow">{{ name }}</h1>
         <ul class="list-inline">
           <li><a href="{{ contact }}"><i class="fa fa-phone"></i></a> <span class="hidden-xs hidden-sm hidden-md">{{ telephone }}</span></li>
           <li><address>г. Чебоксары ул. Калинина 105а</address></li>
