--- a/catalog/view/theme/default/template/extension/captcha/basic.twig
+++ b/catalog/view/theme/default/template/extension/captcha/basic.twig
@@ -8,9 +8,9 @@
     {% else %}
     <label class="col-sm-2 control-label" for="input-captcha">{{ entry_captcha }}</label>
     <div class="col-sm-10">
-      <input type="text" name="captcha" id="input-captcha" class="form-control" />
+      <img src="index.php?route=extension/captcha/basic/captcha" alt="" style="float: left" />
+      <input type="text" name="captcha" id="input-captcha" class="form-control" style="border-radius: 0;border: 1px solid #444;width: 8em;display: block;float: left;margin-left: 1em;" />
       <br>
-      <img src="index.php?route=extension/captcha/basic/captcha" alt="" />
       {% if error_captcha %}
       <div class="text-danger">{{ error_captcha }}</div>
       {% endif %}
