--- a/catalog/view/theme/default/template/information/contact.twig
+++ b/catalog/view/theme/default/template/information/contact.twig
@@ -105,7 +105,7 @@
           {% endfor %}
         </div>
       {% endif %}
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
+      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal contact-form">
         <fieldset>
           <legend>{{ text_contact }}</legend>
           <div class="form-group required">
@@ -140,21 +140,25 @@
 
         {% if text_agree %}
           <div class="buttons">
-            <div class="pull-right">{{ text_agree }}
+            <div>{{ text_agree }}</div>
+            <div class="squaredTwo">
               {% if agree %}
-                <input type="checkbox" name="agree" value="1" checked="checked" />
+                <input type="checkbox" name="agree" id="agree" value="1" checked="checked" />
+                <label for="agree"></label>
               {% else %}
-                <input type="checkbox" name="agree" value="1" />
+                <input type="checkbox" name="agree" id="agree" value="1" checked="checked" />
+                <label for="agree"></label>
               {% endif %}
-              &nbsp;
-              <input type="submit" value="{{ button_submit }}" class="btn btn-primary" />
+            </div>
+            <div class="pull-right">
+              <input type="submit" value="{{ button_submit }}" class="btn btn-cart" style="" />
             </div>
           </div>
         {% else %}
 
           <div class="buttons">
             <div class="pull-right">
-              <input class="btn btn-primary" type="submit" value="{{ button_submit }}" />
+              <input class="btn btn-cart" type="submit" value="{{ button_submit }}" />
             </div>
           </div>
 
