--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -628,10 +628,10 @@ footer h5 {
 	float: none;
 }
 @media (min-width: 767px) {
-.product-list .product-thumb .image {
-	float: left;
-	padding: 0 15px;
-}
+	.product-list .product-thumb .image {
+		float: left;
+		padding: 0 15px;
+	}
 }
 .product-thumb h4 {
 	font-weight: bold;
@@ -644,20 +644,20 @@ footer h5 {
 	margin-left: 230px;
 }
 @media (max-width: 1200px) {
-.product-grid .product-thumb .caption {
-	min-height: 210px;
-	padding: 0 10px;
-}
+	.product-grid .product-thumb .caption {
+		min-height: 210px;
+		padding: 0 10px;
+	}
 }
 @media (max-width: 767px) {
-.product-list .product-thumb .caption {
-	min-height: 0;
-	margin-left: 0;
-	padding: 0 10px;
-}
-.product-grid .product-thumb .caption {
-	min-height: 0;
-}
+	.product-list .product-thumb .caption {
+		min-height: 0;
+		margin-left: 0;
+		padding: 0 10px;
+	}
+	.product-grid .product-thumb .caption {
+		min-height: 0;
+	}
 }
 .product-thumb .rating {
 	padding-bottom: 10px;
@@ -681,11 +681,12 @@ h2.price {
 }
 .product-thumb .price {
 	color: #444;
-	font-size: 28px;
+	font-size: 24px;
 	font-weight: bold;
 	display: inline-block;
+	/*position: relative;*/
 }
-.product-thumb .price span.price-new{
+.product-thumb .price span.price-new, ul.list-unstyled > li > span.price-new{
 	font-weight: 600;
 	color: #fff;
 	font-size: 28px;
@@ -697,13 +698,40 @@ h2.price {
 }
 
 
-.product-thumb .price-old {
+.product-thumb .price-old, ul.list-unstyled > li > span.price-old {
 	color: #999;
-	text-decoration: line-through;
+	/*text-decoration: line-through;*/
 	margin-left: 10px;
-	font-size: 26px;
+	margin-top: .5em;
+	font-size: 22px;
 	display: inline-block;
+	position: relative;
 }
+
+.product-thumb .price-old::before, ul.list-unstyled > li > span.price-old::before{
+	content: '';
+	display: block;
+	border-bottom: 2px solid #000;
+	width: 100%;
+	height: 1px;
+	position: absolute;
+	z-index: 3;
+	top: 50%;
+	transform: rotateZ(15deg);
+}
+
+.product-thumb .price-old::after, ul.list-unstyled > li > span.price-old::after{
+	content: '';
+	display: block;
+	border-bottom: 2px solid #000;
+	width: 100%;
+	height: 1px;
+	position: absolute;
+	z-index: 3;
+	top: 50%;
+	transform: rotateZ(-15deg);
+}
+
 .product-thumb .price-tax {
 	color: #999;
 	font-size: 12px;
@@ -802,21 +830,21 @@ h2.price {
 
 /* fixed colum left + content + right*/
 @media (min-width: 768px) {
-    #column-left  .product-layout .col-md-3 {
-       width: 100%;
-    }
+	#column-left  .product-layout .col-md-3 {
+		width: 100%;
+	}
 
 	#column-left + #content .product-layout .col-md-3 {
-       width: 50%;
-    }
+		width: 50%;
+	}
 
 	#column-left + #content + #column-right .product-layout .col-md-3 {
-       width: 100%;
-    }
+		width: 100%;
+	}
 
-    #content + #column-right .product-layout .col-md-3 {
-       width: 100%;
-    }
+	#content + #column-right .product-layout .col-md-3 {
+		width: 100%;
+	}
 }
 
 /* fixed product layouts used in left and right columns */
@@ -831,8 +859,8 @@ h2.price {
 
 /* Missing focus and border color to overwrite bootstrap */
 .btn-info:hover, .btn-info:active, .btn-info.active, .btn-info.disabled, .btn-info[disabled] {
-    background-image: none;
-    background-color: #df5c39;
+	background-image: none;
+	background-color: #df5c39;
 }
 /* Отсебятина */
 .add{
@@ -962,15 +990,15 @@ input[name=telephone]{
 }
 
 #overlay {
-    /*display: none;*/
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100vw;
-    height: 100vh;
-    background-color: #474b58;
-    opacity: .5;
+	/*display: none;*/
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 999;
+	width: 100vw;
+	height: 100vh;
+	background-color: #474b58;
+	opacity: .5;
 }
 
 .header_shadow {
@@ -1111,4 +1139,14 @@ input[name=telephone]{
 /* end .squaredOne */
 .contact-form{
 	max-width: 800px !important;
+}
+
+input[type=number]{
+	border-radius: 0;
+	border: 1px solid #222;
+	width: 6em;
+}
+
+#product input[type=number]{
+	margin-left: 0;
 }
