--- a/catalog/view/theme/default/template/common/footer.twig
+++ b/catalog/view/theme/default/template/common/footer.twig
@@ -39,7 +39,7 @@
       </div>
     </div>
     <hr>
-    <p>{{ powered }}</p>
+{#    <p>{{ powered }}</p>#}
   </div>
 </footer>
 {% for style in styles %}
