--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -1150,3 +1150,41 @@ input[type=number]{
 #product input[type=number]{
 	margin-left: 0;
 }
+
+#modalFeedback .modal-content{
+	width: 50% !important;
+	left: 25%;
+}
+/**/
+.block_with_feedback{
+	position: fixed;
+	bottom: 5em;
+	left: 2em;
+	/*width: 50px;*/
+	/*height: 50px;*/
+	/*border: 2px solid var(--btn-color);
+	border-radius: 50%;*/
+	z-index: 10;
+}
+
+.call-out{
+	visibility: hidden;
+	width: 50px;
+	height: 50px;
+	cursor: pointer;
+	/*border: 2px solid var(--btn-color);*/
+	border: 2px solid var(--btn-color);
+	border-radius: 50%;
+	background: #ddd;
+	position: relative;
+}
+
+.call-out span{
+	display: block;
+	position: absolute;
+	left: 12px;
+	top: 7px;
+	/*top: 1em;*/
+	font-size: 30px;
+	color: var(--btn-color);
+}
