--- a/catalog/view/theme/default/template/common/home.twig
+++ b/catalog/view/theme/default/template/common/home.twig
@@ -12,3 +12,13 @@
     {{ column_right }}</div>
 </div>
 {{ footer }}
+<script>
+  const loader = $('#loader');
+  $(document).ajaxStart(function () {
+    startLoader(loader);
+  });
+  //
+  $(document).ajaxStop(function () {
+    stopLoader(loader);
+  });
+</script>
