--- a/admin/view/template/sale/order_list.twig
+++ b/admin/view/template/sale/order_list.twig
@@ -150,6 +150,42 @@
         </div>
       </div>
     </div>
+      <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#clearModal">
+          Удалить все
+      </button>
+      <div class="modal" id="clearModal">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <!-- Modal Header -->
+                  <div class="modal-header">
+                      <h4 class="modal-title" style="color: red">Если недостаточно знаний и опыта, сюда не лезь!</h4>
+                      <h4 class="modal-title">Для польной очистки истории заказов выполните SQL запрос:</h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  </div>
+                  <!-- Modal body -->
+                  <div class="modal-body">
+                      <smal>
+                          TRUNCATE oc_order;<br>
+                          TRUNCATE  oc_order_history;<br>
+                          TRUNCATE  oc_order_option;<br>
+                          TRUNCATE  oc_order_product;<br>
+                          TRUNCATE  oc_order_recurring;<br>
+                          TRUNCATE  oc_order_recurring_transaction;<br>
+                          TRUNCATE  oc_order_shipment;<br>
+                          TRUNCATE  oc_order_total;<br>
+                          TRUNCATE  oc_order_voucher;<br>
+                      </smal>
+                  </div>
+                  <div class="modal-footer">
+                      <smal>
+                          <i>
+                              Для SQL запроса можете воспользоваться PhpMyadmin
+                          </i>
+                      </smal>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
   <script type="text/javascript"><!--
 $('#button-filter').on('click', function() {
