--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -12,6 +12,20 @@
 	font-display: swap;
 }
 
+@font-face {
+	font-family: gte;
+	/*src: url(/catalog/view/theme/default/stylesheet/fonts/GTEestiProDisplay-Medium.woff2);*/
+	src: url(/catalog/view/theme/default/stylesheet/fonts/GTEestiProText-Light.woff2);
+	font-display: swap;
+}
+
+@font-face {
+	font-family: gteBold;
+	/*src: url(/catalog/view/theme/default/stylesheet/fonts/GTEestiProDisplay-Medium.woff2);*/
+	src: url(/catalog/view/theme/default/stylesheet/fonts/GTEestiProText-Bold.woff2);
+	font-display: swap;
+}
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
@@ -610,6 +624,7 @@ footer h5 {
 	border: 1px solid #ddd;
 	margin-bottom: 20px;
 	overflow: auto;
+    position: relative;
 }
 .product-thumb .image {
 	text-align: center;
@@ -684,14 +699,18 @@ h2.price {
 	font-size: 24px;
 	font-weight: bold;
 	display: inline-block;
+	font-family: gte;
+	letter-spacing: 2px;
 	/*position: relative;*/
 }
 .product-thumb .price span.price-new, ul.list-unstyled > li > span.price-new{
-	font-weight: 600;
+	font-family: gte;
+	font-weight: 100;
 	color: #fff;
 	font-size: 28px;
+	letter-spacing: 2px;
 	display: inline-block;
-	border: 1px solid red;
+	border: 0;
 	border-radius: 19px;
 	background: red;
 	padding: 10px 20px;
@@ -709,7 +728,7 @@ h2.price {
 	position: relative;
 }
 
-.product-thumb .price-old::before, ul.list-unstyled > li > span.price-old::before{
+/*.product-thumb .price-old::before, ul.list-unstyled > li > span.price-old::before{
 	content: '';
 	display: block;
 	border-bottom: 2px solid #000;
@@ -719,18 +738,18 @@ h2.price {
 	z-index: 3;
 	top: 50%;
 	transform: rotateZ(15deg);
-}
+}*/
 
 .product-thumb .price-old::after, ul.list-unstyled > li > span.price-old::after{
 	content: '';
 	display: block;
-	border-bottom: 2px solid #000;
+	border-bottom: 2px solid #f14224;
 	width: 100%;
 	height: 1px;
 	position: absolute;
 	z-index: 3;
 	top: 50%;
-	transform: rotateZ(-15deg);
+	transform: rotateZ(-12deg);
 }
 
 .product-thumb .price-tax {
@@ -1224,36 +1243,160 @@ input[name=telephone]{
 	width: 50% !important;
 	left: 25%;
 }
-/**/
+/*кнопка обратного звонка*/
 .block_with_feedback{
 	position: fixed;
 	bottom: 5em;
-	left: 2em;
-	/*width: 50px;*/
-	/*height: 50px;*/
-	/*border: 2px solid var(--btn-color);
-	border-radius: 50%;*/
+	left: -1em !important;
+	visibility: hidden;
 	z-index: 10;
 }
 
-.call-out{
-	visibility: hidden;
-	width: 50px;
-	height: 50px;
-	cursor: pointer;
-	/*border: 2px solid var(--btn-color);*/
-	border: 2px solid var(--btn-color);
-	border-radius: 50%;
-	background: #ddd;
-	position: relative;
+.callback-bt {
+	background: var(--btn-color);
+	border:2px solid #F95C18;
+	border-radius:50%;
+	box-shadow:0 8px 10px rgba(249,92,24,0.3);
+	cursor:pointer;
+	height:68px;
+	text-align:center;
+	width:68px;
+	position: fixed;
+	left: 8%;
+	bottom: 18%;
+	z-index:999;
+	transition:.3s;
+	-webkit-animation:email-an linear 1s infinite;
+	animation:email-an linear 1s infinite;
 }
 
-.call-out span{
-	display: block;
-	position: absolute;
-	left: 12px;
-	top: 7px;
-	/*top: 1em;*/
-	font-size: 30px;
-	color: var(--btn-color);
+.callback-bt .text-call{
+	height:68px;
+	width:68px;
+	border-radius:50%;
+	position:relative;
+	overflow:hidden;
+}
+
+.callback-bt .text-call span {
+	text-align: center;
+	color:#F95C18;
+	opacity: 0;
+	font-size: 0;
+	position:absolute;
+	right: 4px;
+	top: 22px;
+	line-height: 14px;
+	font-weight: 600;
+	text-transform: uppercase;
+	transition: opacity .3s linear;
+	font-family: 'montserrat', Arial, Helvetica, sans-serif;
+}
+
+.callback-bt .text-call:hover span {
+	opacity: 1;
+	font-size: 11px;
+}
+.callback-bt:hover i {
+	display:none;
+}
+
+.callback-bt:hover {
+	z-index:1;
+	background:#fff;
+	transition:.3s;
+}
+.callback-bt:hover i {
+	color:#38a3fd;
+	font-size:40px;
+	transition:.3s;
+}
+.callback-bt i {
+	color:#fff;
+	font-size:29px;
+	transition:.3s;
+	line-height: 66px;
+}
+
+.callback-bt i  {
+	-webkit-animation: opsimple 3s infinite;
+	animation: opsimple 3s infinite;
+}
+
+@-webkit-keyframes email-an {
+	0% {
+		box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 0 rgba(249,92,24,0.2),0 0 0 0 rgba(249,92,24,0.2)
+	}
+	40% {
+		box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 15px rgba(249,92,24,0.2),0 0 0 0 rgba(249,92,24,0.2)
+	}
+	80% {
+		box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 30px rgba(249,92,24,0),0 0 0 26.7px rgba(249,92,24,0.067)
+	}
+	100% {
+		box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 30px rgba(249,92,24,0),0 0 0 40px rgba(249,92,24,0.0)
+	}
+}@keyframes email-an {
+	 0% {
+		 box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 0 rgba(249,92,24,0.2),0 0 0 0 rgba(249,92,24,0.2)
+	 }
+	 40% {
+		 box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 15px rgba(249,92,24,0.2),0 0 0 0 rgba(249,92,24,0.2)
+	 }
+	 80% {
+		 box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 30px rgba(249,92,24,0),0 0 0 26.7px rgba(249,92,24,0.067)
+	 }
+	 100% {
+		 box-shadow:0 8px 10px rgba(249,92,24,0.3),0 0 0 30px rgba(249,92,24,0),0 0 0 40px rgba(249,92,24,0.0)
+	 }
+ }
+
+@keyframes opsimple {
+	0% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 1;
+	}
+
+	80% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@-webkit-keyframes opsimple {
+	0% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 1;
+	}
+	80% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+/* конец кнопки */
+.percent{
+    position: absolute;
+    display: inline-block;
+	text-align: center;
+	width: 80px;
+    /*background: var(--btn-color);*/
+    background: #eee;
+    color: red;
+	/*border-bottom: 2px solid red;*/
+    font-size: 18px;
+    letter-spacing: 2px;
+    left: -32px;
+    top: -16px;
+    padding: 30px .5em 0 .5em;
+    font-family: gteBold;
+	transform: rotate(-45deg);
+    z-index: 2;
 }
