--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -619,4 +619,14 @@
         });
     });
     //--></script>
-{{ footer }} 
+{{ footer }}
+<script>
+    const loader = $('#loader');
+    $(document).ajaxStart(function () {
+        startLoader(loader);
+    });
+    //
+    $(document).ajaxStop(function () {
+        stopLoader(loader);
+    });
+</script>
