изменена окраска ценников с помощью JS

--- a/admin/view/template/sale/order_list.twig
+++ b/admin/view/template/sale/order_list.twig
@@ -159,7 +159,7 @@
                   <!-- Modal Header -->
                   <div class="modal-header">
                       <h4 class="modal-title" style="color: red">Если недостаточно знаний и опыта, сюда не лезь!</h4>
-                      <h4 class="modal-title">Для польной очистки истории заказов выполните SQL запрос:</h4>
+                      <h4 class="modal-title">Для полной очистки истории заказов выполните SQL запрос:</h4>
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
                   </div>
                   <!-- Modal body -->
